// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Todo GraphQL AddTodo 1`] = `
Object {
  "data": Object {
    "removeUser": Object {
      "clientMutationId": "test0-0",
    },
  },
}
`;

exports[`Testing Todo GraphQL AddTodo 2`] = `
Object {
  "data": Object {
    "addUser": Object {
      "clientMutationId": "test0-0",
      "id": "VXNlcjozMQ==",
    },
  },
}
`;

exports[`Testing Todo GraphQL AddTodo 3`] = `
Object {
  "data": Object {
    "addTodo": Object {
      "clientMutationId": "1",
      "todoEdge": Object {
        "cursor": "MTA=",
        "node": Object {
          "complete": false,
          "id": "VG9kbzoxMA==",
          "text": "Get a customer 1",
        },
      },
      "user": Object {
        "completedCount": 0,
        "email": "test0@test.com",
        "totalCount": 1,
      },
    },
  },
}
`;

exports[`Testing Todo GraphQL AddTodo 4`] = `
Object {
  "data": Object {
    "addTodo": Object {
      "clientMutationId": "1",
      "todoEdge": Object {
        "cursor": "MTE=",
        "node": Object {
          "complete": false,
          "id": "VG9kbzoxMQ==",
          "text": "Get a customer 2",
        },
      },
      "user": Object {
        "completedCount": 0,
        "email": "test0@test.com",
        "totalCount": 2,
      },
    },
  },
}
`;

exports[`Testing Todo GraphQL AddTodo 5`] = `
Object {
  "data": Object {
    "addTodo": Object {
      "clientMutationId": "1",
      "todoEdge": Object {
        "cursor": "MTI=",
        "node": Object {
          "complete": false,
          "id": "VG9kbzoxMg==",
          "text": "Get a customer 3",
        },
      },
      "user": Object {
        "completedCount": 0,
        "email": "test0@test.com",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Testing Todo GraphQL ChangeTodoStatus 1`] = `
Object {
  "data": Object {
    "removeUser": Object {
      "clientMutationId": "test0-0",
    },
  },
}
`;

exports[`Testing Todo GraphQL ChangeTodoStatus 2`] = `
Object {
  "data": Object {
    "addUser": Object {
      "clientMutationId": "test0-0",
      "id": "VXNlcjozNA==",
    },
  },
}
`;

exports[`Testing Todo GraphQL ChangeTodoStatus 3`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "4",
      "todo": Object {
        "complete": false,
        "id": "VG9kbzoxMA==",
        "text": "",
      },
      "user": Object {
        "completedCount": 0,
        "email": "test0@test.com",
        "id": "VXNlcjozNA==",
        "totalCount": 0,
      },
    },
  },
}
`;

exports[`Testing Todo GraphQL ChangeTodoStatus 4`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "4",
      "todo": Object {
        "complete": false,
        "id": "VG9kbzoxMQ==",
        "text": "",
      },
      "user": Object {
        "completedCount": 0,
        "email": "test0@test.com",
        "id": "VXNlcjozNA==",
        "totalCount": 0,
      },
    },
  },
}
`;

exports[`Testing Todo GraphQL ChangeTodoStatus 5`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "4",
      "todo": Object {
        "complete": false,
        "id": "VG9kbzoxMg==",
        "text": "",
      },
      "user": Object {
        "completedCount": 0,
        "email": "test0@test.com",
        "id": "VXNlcjozNA==",
        "totalCount": 0,
      },
    },
  },
}
`;

exports[`Testing Todo GraphQL ClearCompletedTodos 1`] = `
Object {
  "data": Object {
    "removeUser": Object {
      "clientMutationId": "test0-0",
    },
  },
}
`;

exports[`Testing Todo GraphQL ClearCompletedTodos 2`] = `
Object {
  "data": Object {
    "addUser": Object {
      "clientMutationId": "test0-0",
      "id": "VXNlcjozMw==",
    },
  },
}
`;

exports[`Testing Todo GraphQL ClearCompletedTodos 3`] = `
Object {
  "data": Object {
    "clearCompletedTodos": Object {
      "clientMutationId": "3",
      "deletedTodoIds": null,
      "user": Object {
        "completedCount": 0,
        "id": "VXNlcjozMw==",
        "totalCount": 0,
      },
    },
  },
}
`;

exports[`Testing Todo GraphQL MarkAllTodos 1`] = `
Object {
  "data": Object {
    "removeUser": Object {
      "clientMutationId": "test0-0",
    },
  },
}
`;

exports[`Testing Todo GraphQL MarkAllTodos 2`] = `
Object {
  "data": Object {
    "addUser": Object {
      "clientMutationId": "test0-0",
      "id": "VXNlcjozMg==",
    },
  },
}
`;

exports[`Testing Todo GraphQL MarkAllTodos 3`] = `
Object {
  "data": Object {
    "markAllTodos": Object {
      "changedTodos": Array [],
      "clientMutationId": "2",
      "user": Object {
        "completedCount": 0,
        "id": "VXNlcjozMg==",
        "totalCount": 0,
      },
    },
  },
}
`;
